--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The title of your web page</title>
+    <title>MARIAN'S FIRST WEBPAGE</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <img src="images/female.jpg">
 
     <h1>Marian Zhen</h1>
-    <p>I graduated from college and after working for 6 months, I decided to quit my job and move abroad for a year. It was one of the toughest things I did in my life. I lived in rural China and taught English with TFC. Then I came back and decided I wanted to start a start up with a friend.</p>
-    <hr>
-    <img src =" "
+    <p>This is the first website I've made and am making. I am just exploring CSS and HTML and doing this with women who code. It is SO COOL!!!</p>
+    
+  
     <h2 class="hey"> Websites I think this is interestinggggg</h2>
     <ul>
 
@@ -24,11 +23,10 @@
 
     <h2>My favorite hobbies</h2>
     <ol>
-      <strong>
-      <li>Teaching</li>
-      <li><em>Talking</em></li>
-      <li>Learning to Bike</li>
-      </strong>
+   
+      <li><strong>Teaching</strong></li>
+      <li>Talking</li>
+      <li>Learning to Bike, which took awhile. But I had to take classes, I gave up on my friends/family trying to teach me because I was worried I'd hurt them!</li>
     </ol>
     <form>
       text field <input type="text" name="best">
